# termex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flutter_rust_bridge.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
app/: .flutter-plugins-dependencies  README.md  distribute_options.yaml  pubspec.yaml
crates/termex-core/: Cargo.toml
crates/termex-core/src/: lib.rs  paths.rs
crates/termex-core/src/ai/: danger.rs  mod.rs  provider_client.rs
crates/termex-core/src/cloud/: mod.rs  ssm.rs
crates/termex-core/src/local_ai/: downloader.rs  mod.rs  port_check.rs  storage.rs
crates/termex-core/src/sftp/: event_emitter.rs  mod.rs  session.rs
crates/termex-core/src/ssh/: auth.rs  channel.rs  event_emitter.rs  mod.rs  session.rs
crates/termex-core/src/storage/: chain.rs  migrations.rs  models.rs  proxies.rs  snippet.rs
crates/termex-core/src/team/: git.rs  mod.rs  permission.rs
crates/termex-flutter-bridge/: Cargo.toml  pubspec.yaml
crates/termex-flutter-bridge/lib/: termex_bridge.dart
crates/termex-flutter-bridge/lib/src/: api.dart  models.dart
crates/termex-flutter-bridge/src/: db_state.rs  frb_generated.rs  frb_sftp_emitter.rs  frb_ssh_emitter.rs  lib.rs  local_ai_state.rs  session_registry.rs
crates/termex-flutter-bridge/src/api/: ai.rs  app.rs  audit_catalogue.rs  backup.rs  cloud.rs  crypto.rs  external_tools.rs  git_sync.rs  group.rs  keybindings.rs  local_ai.rs  local_fs.rs  mod.rs  monitor.rs  plugin.rs  port_forward.rs  proxy.rs  recording.rs  server.rs  settings.rs  sftp.rs  snippet.rs  ssh.rs  ssh_config.rs  system.rs  team.rs  team_permissions.rs  theme.rs  update.rs
crates/termex-flutter-bridge/tests/: test_api_ai.rs  test_api_audit_catalogue.rs  test_api_backup.rs  test_api_cloud.rs  test_api_cloud_persistence.rs  test_api_external_tools.rs  test_api_git_sync.rs  test_api_group.rs  test_api_host_key.rs  test_api_keybinding_scopes.rs  test_api_keybindings.rs  test_api_keybindings_persistence.rs  test_api_local_ai.rs  test_api_local_fs.rs  test_api_monitor.rs  test_api_monitor_v2.rs  test_api_plugin.rs  test_api_port_forward.rs  test_api_port_forward_v2.rs  test_api_proxy.rs  test_api_proxy_v2.rs  test_api_recording.rs  test_api_recording_persistence.rs  test_api_server.rs  test_api_settings.rs  test_api_settings_persistence.rs  test_api_sftp.rs  test_api_snippet.rs  test_api_snippet_import_export.rs  test_api_snippet_persistence.rs  test_api_ssh.rs  test_api_ssh_config.rs  test_api_system.rs  test_api_team.rs  test_api_team_invite.rs  test_api_team_permissions.rs  test_api_team_v2.rs  test_api_theme.rs  test_api_update.rs
docs/: BINARY_SETUP_GUIDE.md  LOCAL_AI_SETUP.md  MIGRATION.md  PERFORMANCE_OPTIMIZATION.md  a11y-walk-v0.52.0.md  performance-baseline-v0.52.0.md  requirements.md  tech-debt.md
scripts/: bump-version.mjs  check-arb-completeness.sh  deploy-to-cdn.sh  download-llama-server-binaries.sh  frb-codegen.sh  frb-post-codegen.sh  generate-icons.mjs  release.sh  scan-hardcoded-strings.dart  setup-dev-environment.sh  sign-linux.sh  sign-macos.sh  sign-windows.ps1  update-appcast.sh  update-model-hashes.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
(+568 files in other folders)
