[package]
name        = "termex-core"
version = "0.53.2"
edition     = "2021"
license     = "MIT"
description = "Termex core business logic — no Tauri dependency"

[lib]
name = "termex_core"

[features]
default  = []
sentinel = []

[dependencies]
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
thiserror.workspace   = true
uuid.workspace        = true
anyhow.workspace      = true
log.workspace         = true
async-trait.workspace = true
zeroize.workspace     = true

time         = { version = "0.3", features = ["serde", "macros", "formatting"] }
env_logger   = "0.11"
rusqlite     = { version = "0.32", features = ["bundled-sqlcipher"] }
ring         = "0.17"
argon2       = "0.5"
russh        = "0.49"
russh-keys   = "0.49"
russh-sftp   = "2.1"
dirs         = "6"
tokio-util   = "0.7"
regex        = "1"
reqwest      = { version = "0.12", features = ["json", "stream"] }
flate2       = "1"
tar          = "0.4"
futures-util = "0.3"
hex          = "0.4"
keyring      = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio-socks  = "0.5"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
glob         = "0.3"
whoami       = "1"
base64       = "0.22"
git2         = { version = "0.19", default-features = false, features = ["ssh", "https", "vendored-openssl"] }
fs2          = "0.4"

[dev-dependencies]
tempfile.workspace = true
